# zzstat-json

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  archer.json  archer_entity_example.rs  basic_stats.json  basic_stats_example.rs  complex_dependencies.json  complex_dependencies_example.rs  experience_gain.json  health_regeneration.json  mage.json  mana_pool.json  mana_pool_example.rs  movement_speed.json  paladin.json  paladin_example.rs  resistance.json  resistance_example.rs  rogue.json  rogue_example.rs  status_effects.json  strong_against.json  strong_against_undead.json  warrior.json  warrior_example.rs
src/: config.rs  error.rs  lib.rs  loader.rs  template.rs  transform.rs  transform_conditional.rs  transform_map.rs
